--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-transparent px-4 pt-3">
     <div class="container-fluid">
       <a class="navbar-brand d-flex align-items-center" href="#">
-        <img src="_2025-02-24-12-29-50-1.png" alt="logo" width="50" class="me-2" />
+        <img src="./_2025-02-24-12-29-50-1.png" alt="logo" width="50" class="me-2" />
         <span class="site-title">Smoochez.co</span>
       </a>
       <div class="ms-auto">
